# Bowlmania

./: 2023.ipynb  README.md  Total Offense_0.csv  Total Offense_1.csv  fetch.r  master.csv  meep.py  model.ipynb  model.pickle  pyproject.toml  results.md  science.py  scrape.py  stats.csv  stats_m.csv  training_data.csv
data/: 2013-2014.csv  2014-2015.csv  2015-2016.csv  2016-2017.csv  2017-2018.csv  2018-2019.csv  2019-2020.csv  2020-2021.csv  2021-2022.csv  2022-2023.csv  2022_games.csv  2023-2024.csv  all_bowl_games.csv  bowl_games_2023.csv  cfb13.csv  cfb14.csv  cfb15.csv  cfb16.csv  cfb17.csv  cfb18.csv  cfb19.csv  cfb20.csv  cfb21.csv  cfb22.csv  games.csv  teams.csv
input/: 2022_games.csv
scraping/: 3rd Down Conversion Pct Defense.csv  3rd Down Conversion Pct.csv  4th Down Conversion Pct Defense.csv  4th Down Conversion Pct.csv  Fewest Penalty Yards Per Game.csv  First Down Defense.csv  First Down Offense.csv  Kickoff Return Defense.csv  Kickoff Return.csv  Passing Offense.csv  Passing Yards Allowed.csv  Punt Return Defense.csv  Punt Return.csv  Red Zone Defense.csv  Red Zone Offense.csv  Rushing Defense.csv  Rushing Offense.csv  Sacks Allowed.csv  Scoring Defense.csv  Scoring Offense.csv  Team Tackles for Loss.csv  Time of Possession.csv  Total Defense.csv  Total Offense.csv  Turnover Margin.csv
scraping/2014/11.0/: 3rd Down Conversion Pct Defense.csv  3rd Down Conversion Pct.csv  4th Down Conversion Pct Defense.csv  4th Down Conversion Pct.csv  Fewest Penalty Yards Per Game.csv  Kickoff Return.csv  (+19 more)
scripts/: csv_fixer.py  meep.py  scrape.py  scrape_games.py
(+525 files in other folders)
