[tool.poetry]
name = "bowlmania"
version = "0.1.0"
description = ""
authors = ["Bernie Conrad <root@bernstern.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.16.0"
pandas = "^2.1.4"
lxml = "^4.9.3"
progressbar2 = "^4.2.0"
scikit-learn = "^1.3.2"
cfbd = "^4.5.2"
unidecode = "^1.3.7"
altair = "^5.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
